# NOUFEX_AI

./: .gitignore  FEASIBILITY_STUDY.md  IMPLEMENTATION_STUDY.md  IMPLEMENTATION_STUDY_V2.md  REVIEW_REPORT.md
ai-models/prompts/: system.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.in  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_add_agents_chat_rag.py  0003_add_pgvector.py  0004_add_billing.py  0005_add_email_verification.py  0006_add_audit_logs.py
backend/noufex_ai/: __main__.py  db.py  deps.py  exceptions.py  logging_config.py  main.py  middleware.py  settings.py  telemetry.py
backend/noufex_ai/modules/agent_skills/: __init__.py  registry.py
backend/noufex_ai/modules/agents/: models.py  router.py  schemas.py  service.py
backend/noufex_ai/modules/audit/: __init__.py  router.py  service.py
backend/noufex_ai/modules/billing/: __init__.py  models.py  router.py  schemas.py  service.py
backend/noufex_ai/modules/browser/: __init__.py  router.py  schemas.py  service.py
backend/noufex_ai/modules/chat/: models.py  router.py  schemas.py  service.py
backend/noufex_ai/modules/computer/: __init__.py  router.py  schemas.py  service.py
backend/noufex_ai/modules/design/: __init__.py  animations.py  components.py  reviewer.py  router.py  router_schemas.py  schemas.py  service.py
backend/noufex_ai/modules/rag/: router.py  schemas.py  service.py
backend/noufex_ai/modules/security/: validation.py
backend/noufex_ai/modules/tenants/: models.py  router.py  schemas.py  service.py
backend/noufex_ai/modules/users/: email_service.py  models.py  router.py  schemas.py  security.py  service.py
backend/noufex_ai/modules/utils/: token_counter.py
backend/noufex_ai/scripts/: __main__.py  seed.py
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_billing.py  test_endpoints.py
backend/tests/unit/: test_billing.py  test_chat_service.py  test_design.py  test_exceptions.py  test_rate_limiter.py  test_schemas.py  test_security.py
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
infrastructure/: docker-compose.yml
