[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "noufex-ai-backend"
version = "1.0.0"
description = "Multi-tenant AI agent platform"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "NOUFEX" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "psycopg2-binary>=2.9",
    "pyjwt[crypto]>=2.9",
    "argon2-cffi>=23.1",
    "email-validator>=2.2",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "openai>=1.51",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "structlog>=24.4",
    "Pillow>=10.4",
    "pyautogui>=0.9.54",
    "psutil>=6.0",
    "playwright>=1.47",
    "beautifulsoup4>=4.12",
    "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["noufex_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "UP", "N", "S", "C4", "DTZ",
    "PT", "Q", "RET", "SIM", "TID", "ARG", "PL", "TRY",
]
ignore = [
    "PLR0913",   # too many arguments (acceptable in FastAPI deps)
    "PLR2004",   # magic value (acceptable in tests)
    "S101",      # assert allowed in tests
    "TRY003",    # long messages outside exception hierarchy are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
"alembic/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]
exclude = ["alembic/", "tests/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --disable-warnings"
markers = [
    "integration: requires external services",
    "slow: long-running tests",
]

[tool.coverage.run]
source = ["noufex_ai"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
